fix pom.xml file