@@ -15,9 +15,7 @@
 	<name>InMemoryDB</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<maven.compiler.source>15</maven.compiler.source>
-		<maven.compiler.target>15</maven.compiler.target>
-		<java.version>15</java.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -122,29 +120,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>15</source>
-					<target>15</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                </configuration>
-            </plugin>
 
-        </plugins>
+
+		</plugins>
 	</build>
 
 </project>
